# oracle-workshop

./: Cargo.toml
advanced_judger/: Cargo.toml
easy_oracle/: lib.rs
eth_holder/: Cargo.toml  lib.rs  transaction.rs
utils/: Cargo.toml
utils/src/: lib.rs  transaction.rs
