[package]
name = "eth_holder"
version = "0.1.0"
authors = ["Hang Yin <hangyin@phala.network>"]
edition = "2021"

[profile.release.package.compiler_builtins]
# The compiler-builtins crate cannot reference libcore, and it's own CI will
# verify that this is the case. This requires, however, that the crate is built
# without overflow checks and debug assertions. Forcefully disable debug
# assertions and overflow checks here which should ensure that even if these
# assertions are enabled for libstd we won't enable them for compiler_builtins
# which should ensure we still link everything correctly.
overflow-checks = false

[dependencies]
ink_prelude = { version = "3", default-features = false }
ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "=3.1.2", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

openbrush = { path = "../vendor/openbrush-contracts", version = "~2.1.0", default-features = false }
pink-extension = { version = "0.1.17", default-features = false }
fat_utils = { path = "../utils", default-features = false }

primitive-types = { version = "0.11.1", default-features = false, features = ["codec", "scale-info"] }
serde-json-core = { version = "0.4.0", default-features = false }
serde = { version = "1.0.137", default-features = false, features = ["derive", "alloc"]}
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = "0.3.4"

[dev-dependencies]
environmental = { path = "../utils/environmental", default-features = false }
pink-extension-runtime = "0.1.3"

[lib]
name = "eth_holder"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "openbrush/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "serde-json-core/std",
    "fat_utils/std",
]
ink-as-dependency = []
mockable = [
    "openbrush/mockable",
]
